k8s-manifests/02-backend-questionnaire.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: web-questionnaire
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: denisktv/backend-questionnaire:v0.0.1 
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: web-questionnaire
  labels:
    app: backend
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: backend
