k8s-manifests/03-frontend-questionnaire.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: web-questionnaire
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: denisktv/frontend-questionnaire:v0.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: web-questionnaire
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
